--- a/index.ipynb
+++ b/index.ipynb
@@ -414,7 +414,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(counti)"
+    "unique_countries = set(countries)"
    ]
   },
   {
