Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -432,14 +432,14 @@
        " 'Croatia',\n",
        " 'Finland',\n",
        " 'Italy',\n",
+       " 'Malta',\n",
        " 'Mexico',\n",
        " 'Morocco',\n",
-       " 'New Mexico',\n",
        " 'South Korea',\n",
        " 'USA'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
