--- a/index.ipynb
+++ b/index.ipynb
@@ -458,12 +458,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "num_of_repeats = len(unique_countries)\n",
-    "num_of_repeats = len(countries)# 3"
+    "num_of_repeats \n",
+    "num_of_repeats = len(countries)# 3\n",
+    "num_of_repeats "
    ]
   },
   {
