Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -410,16 +410,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "unique_countries = set(countries)"
+    "unique_countries = list(set(countries))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -427,19 +427,19 @@
     {
      "data": {
       "text/plain": [
-       "{'Argentina',\n",
+       "['Argentina',\n",
        " 'Canada',\n",
-       " 'Croatia',\n",
-       " 'Finland',\n",
-       " 'Italy',\n",
-       " 'Malta',\n",
-       " 'Mexico',\n",
        " 'Morocco',\n",
-       " 'South Korea',\n",
-       " 'USA'}"
+       " 'Italy',\n",
+       " 'Finland',\n",
+       " 'Croatia',\n",
+       " 'USA',\n",
+       " 'Mexico',\n",
+       " 'Malta',\n",
+       " 'South Korea']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
