--- a/index.ipynb
+++ b/index.ipynb
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
        "13"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,8 +475,8 @@
    "source": [
     "num_of_repeats = len(unique_countries)\n",
     "num_of_repeats \n",
-    "num_of_repeats = len(countries)# 3\n",
-    "num_of_repeats "
+    "num_of_repeats2 = len(countries)# 3\n",
+    "num_of_repeats2 "
    ]
   },
   {
