Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -458,11 +458,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-3"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "num_of_repeats = len(unique_countries) - num_of_repeats2 = len(countries)# 3\n",
+    "num_of_repeats = len(unique_countries) - len(countries)# 3\n",
     "num_of_repeats \n"
    ]
   },
