Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -473,8 +473,8 @@
     }
    ],
    "source": [
-    "num_of_repeats = len(unique_countries) - len(countries)# 3\n",
-    "num_of_repeats \n"
+    "num_of_repeats = len(countries) - len(unique_countries)# 3\n",
+    "num_of_repeats "
    ]
   },
   {
